TS-3603: Debug assert due to missing lock when accept_threads are disabled.